@@ -1,4 +1,5 @@
 04/10/2009
+- check if mb string functions available otherwise fallback to normal string functions
 - added global variable scope SMARTY_GLOBAL_SCOPE 
 - enable 'variable' filter by default
 - fixed {$smarty.block.parent.foo} 
